--- a/assets/css/todos.css
+++ b/assets/css/todos.css
@@ -1,3 +1,10 @@
-body{
-	background:purple;
+#container{
+	width:360px;
+	border: 2px solid gray;
+	margin: 0 auto;
+}
+
+.completed{
+	color: gray;
+	text-decoration: line-through;
 }
